# prompts-evaluator

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: Unfinished.py  file.py  pipecat_evaluator.py  static_evaluator.py  test.py  web_evaluator.py
src/data/: prompt.json  t.txt
